syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.zup.edu";
option java_outer_classname = "Frete";
option objc_class_prefix = "HLW";

package br.com.zup.edu;

service FreteService {
  rpc send (FreteRequest) returns (FreteReply) {}
  rpc calculaFrete (CalculaFreteRequest) returns (CalculaFreteReply){}
}

message ErroDetails{
  int32 code = 1;
  string message = 2;
}

message FreteRequest {
  string name = 1;
}

message FreteReply {
  string message = 1;
}

message CalculaFreteRequest {
  string cep = 1;
}

message CalculaFreteReply {
  string cep = 1;
  double valor = 2;
}